objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>LostReasonCode__c</fullName>
        <description>SFDC1 -171 ; if the contract is Closed Lost then the Lost Reason Code from the Contract Should display. Otherwise the list of Lost Reason Codes for the Opportunity are listed here.
SFDC1-769 : Updated the Picklist Values and removed old Values.
SFDC1-6704 : Updated the Picklist Values and removed old Values.</description>
        <inlineHelpText>Choose a valid reason from the dropdown list</inlineHelpText>
        <label>Lost Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bankruptcy/Out of Business</fullName>
                </value>
                <value>
                    <fullName>Company Too Small/Retail/Commerce</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Contact Non Responsive/Wrong Contact</fullName>
                </value>
                <value>
                    <fullName>Created in Error</fullName>
                    <label>Created in Error (Sales Ops Team Only)</label>
                </value>
                <value>
                    <fullName>Customer exiting business</fullName>
                    <label>Customer Exiting Business</label>
                </value>
                <value>
                    <fullName>Customer Lost Bid</fullName>
                </value>
                <value>
                    <fullName>Cutting Costs/Lost Budget</fullName>
                </value>
                <value>
                    <fullName>Decided to do it Themselves</fullName>
                </value>
                <value>
                    <fullName>IHSM Decision to Pass/No Bid</fullName>
                    <label>Decision to Pass / No Bid</label>
                </value>
                <value>
                    <fullName>Duplicate/Existing Opp</fullName>
                </value>
                <value>
                    <fullName>Key contact left company</fullName>
                </value>
                <value>
                    <fullName>Customer has merged / restructured</fullName>
                    <label>Merger &amp; Acquisition Activity</label>
                </value>
                <value>
                    <fullName>No/low usage</fullName>
                </value>
                <value>
                    <fullName>No further interest, has all information needed</fullName>
                </value>
                <value>
                    <fullName>Non Payment</fullName>
                </value>
                <value>
                    <fullName>Product/Solution does not match need</fullName>
                </value>
                <value>
                    <fullName>Product Code Changed</fullName>
                </value>
                <value>
                    <fullName>Product discontinued</fullName>
                    <label>Product Discontinued</label>
                </value>
                <value>
                    <fullName>Product Quality Issue</fullName>
                </value>
                <value>
                    <fullName>Project completed/cancelled</fullName>
                    <label>Project Completed/Cancelled</label>
                </value>
                <value>
                    <fullName>Systematically Closed Lost - Past Due</fullName>
                </value>
                <value>
                    <fullName>Terms &amp; Conditions Issues</fullName>
                </value>
                <value>
                    <fullName>Unfavorable Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LostReasonDescription__c</fullName>
        <description>SFDC1 - 171 ; For lost contract/Deal; Describe the reason for lost deal</description>
        <inlineHelpText>Provide more information for losing this deal</inlineHelpText>
        <label>Lost Reason Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LostTotalPrice__c</fullName>
        <description>SFDC1-8988: Sum of &quot;Updated List Price&quot; on Opportunity Products with status = &quot;Lost&quot;</description>
        <inlineHelpText>Sum of &quot;Updated List Price&quot; on  &quot;Lost&quot; Opportunity Products</inlineHelpText>
        <label>Lost Total Price</label>
        <summarizedField>OpportunityLineItem.UnitListPrice__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>equals</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MFNClause__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-2548 Global Alliance Upgrade</description>
        <inlineHelpText>Select if there is a Most Favoured Nation (MFN) clause.</inlineHelpText>
        <label>MFN Clause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MISActivityAdded__c</fullName>
        <description>SFDC1-2243 Whenever an activity is created for an opportunity,  MISActivityAdded field is auto populated with the current timestamp.</description>
        <inlineHelpText>System Managed Field: This field is used for MIS pipeline reporting. Whenever an activity is created for an opportunity,  MISActivityAdded field is auto populated with the current timestamp.</inlineHelpText>
        <label>MIS Activity Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MISAttachmentAdded__c</fullName>
        <description>SFDC1-2243 Whenever an Attachment is added to an opportunity,  MISAttachmentAdded field is auto populated with the current timestamp.</description>
        <inlineHelpText>System Managed Field. This field is used for MIS pipeline reporting. Whenever an Attachment is added to an opportunity,  MISAttachmentAdded field is auto populated with the current timestamp.</inlineHelpText>
        <label>MIS Attachment Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MarketingCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1 -171 ; Look up field for Marketing Campaign on Opportunity page layout</description>
        <inlineHelpText>Please select a Marketing Camapign</inlineHelpText>
        <label>Marketing Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MigrationSourceID__c</fullName>
        <description>SFDC1-1192 This field is see the source ID that created the opportunity that was migrated
SFDC1-2219 Rename Migration Source ID to External Source ID</description>
        <inlineHelpText>Migration Source ID</inlineHelpText>
        <label>External Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinimumEstimatedVariableRevenue__c</fullName>
        <description>SFDC-2548 Global Alliance Upgrade</description>
        <inlineHelpText>If variable revenue is generated, please provide the estimated minimum.</inlineHelpText>
        <label>Minimum Estimated Variable Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilitySalesNew__c</fullName>
        <inlineHelpText>The total first year value of products, with status = new</inlineHelpText>
        <label>Sales New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MobilitySalesRenewal__c</fullName>
        <inlineHelpText>first year value of all the products = existing</inlineHelpText>
        <label>Sales Renewal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MultiYear__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-54 field to track if opportunity has multi-year schedules.</description>
        <inlineHelpText>Populates from the Products if term of contract is greater than or equal to 2 years</inlineHelpText>
        <label>MultiYear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewExistingPartner__c</fullName>
        <description>SFDC-2548 Global Alliance Partner</description>
        <inlineHelpText>Select whether the opportunity is with a new or existing Alliance Partner.</inlineHelpText>
        <label>New/Existing Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewTotalPrice__c</fullName>
        <description>SFDC1-8988: Sum of the &quot;Updated List Price&quot; on Opportunity Products where status = &quot;New&quot;</description>
        <inlineHelpText>Sum of &quot;Updated List Price&quot; on new &quot;Opportunity Products&quot;</inlineHelpText>
        <label>New Total Price</label>
        <summarizedField>OpportunityLineItem.UnitListPrice__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NextReview__c</fullName>
        <description>SFDC1-4551. This field will hold the date value of Next Review.</description>
        <label>Next Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NextYearOpportunityLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-5075: Link to the Next Year&apos;s Opportunity on Renewals</description>
        <label>Next Year Opportunity Link</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Next Year Opportunity Link)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NextYearOpportunityNumber__c</fullName>
        <description>SFDC-5075: Formula field to Capture next year oppy&apos;s Oppy Number</description>
        <formula>NextYearOpportunityLink__r.Opportunitynum__c</formula>
        <label>Next Year Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonCompete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-2548 global Alliance upgrade</description>
        <inlineHelpText>Select if there is a Non-Compete clause.</inlineHelpText>
        <label>Non-Compete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfProductsAtRisk__c</fullName>
        <inlineHelpText>Total Number of Products at Risk present in opportunity</inlineHelpText>
        <label>Number of Products at Risk</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>equals</operation>
            <value>Existing</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.IsProductatRisk__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.RiskStatus__c</field>
            <operation>equals</operation>
            <value>Open - Pending Resolution</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OaRStatus__c</fullName>
        <description>SFDC1-6709 : Field to hold the status of the Opportunity at Risk record associated to the opportunity</description>
        <label>OaRStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityCountry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-616 Lookup to Country object</description>
        <label>Opportunity Country/Territory</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityGeography__c</fullName>
        <description>SFDC-616. Geography from the country referenced in this opportunity.</description>
        <formula>TEXT(OpportunityCountry__r.Geography__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityID18Character__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityID 18 Character</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <description>SFDC1-8125: Used in &quot;Contract Management&quot; case lightning page layout</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Name</inlineHelpText>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityOwnerEmployeeID__c</fullName>
        <description>SFDC1-9658 - To add Employee Number from the User record of the Opportunity Owner to the Opportunity</description>
        <formula>Owner.EmployeeNumber__c</formula>
        <inlineHelpText>Extracts employee ID user who is opportunity owner</inlineHelpText>
        <label>Opportunity Owner Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityOwner__c</fullName>
        <description>SFDC1-8125: Used in &quot;Contract Management&quot; case lightning page layout</description>
        <formula>Owner.FirstName + &apos; &apos;+ Owner.LastName</formula>
        <inlineHelpText>Opportunity Owner name</inlineHelpText>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityPredictedWinningProbability__c</fullName>
        <description>SFDC-4030 new custom field created by AI Prediction Model for predicting winning probability of an opportunity</description>
        <label>Predicted Winning Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityRecordType__c</fullName>
        <description>SFDC1-6174 Formula field that displays opportunity record type on page layout</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Record Type</inlineHelpText>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityRegion__c</fullName>
        <description>SFDC-616 Region from the country referenced in the opportunity.</description>
        <formula>TEXT(OpportunityCountry__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1 -171; Look up field for any related opportunity on opportunity record/ pagelayout</description>
        <inlineHelpText>Please select a related Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunitynum__c</fullName>
        <description>SFDC1 -171 (alphanumeric - Read Only);Automatic generated - OP+10 digits (OP-#####);
SFDC1-3816 Rename Opportunity ID field to Opportunity Num</description>
        <displayFormat>OP{0000000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>System generated opportunity number</inlineHelpText>
        <label>Opportunity Num</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>OriginatingContractsAutoRenewal__c</fullName>
        <description>SFDC-1909: This field will capture originating contracts Auto Renewal Flag.</description>
        <formula>ContractBeingRenewed__r.AutoRenewal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Originating Contracts Auto Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Attributed_Finished_Sequences__c</fullName>
        <description>All sequences that the prospect has completed via Outreach when opp is created</description>
        <inlineHelpText>All sequences that the prospect has completed via Outreach when opp is created</inlineHelpText>
        <label>Attributed Finished Sequences</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Last_Touch_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary contact when this opportunity was first created</description>
        <inlineHelpText>The primary contact when this opportunity was first created</inlineHelpText>
        <label>Last Touch Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Last Touch Contact)</relationshipLabel>
        <relationshipName>Last_Touch_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outreach_Last_Touch_Sequence__c</fullName>
        <description>The last active sequence for the first Primary contact in an opportunity when the opportunity was created.</description>
        <inlineHelpText>The last active sequence for the first primary contact in an opportunity when the opportunity was created.</inlineHelpText>
        <label>Last Touch Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Sequence_Attributed__c</fullName>
        <formula>IF(
NOT(ISBLANK(Outreach_Attributed_Finished_Sequences__c)), 
&quot;Yes&quot;,
&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence Attributed?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overlay__c</fullName>
        <description>SFDC1-7037: To Summarize all users in the overlay split (SMEs)</description>
        <inlineHelpText>Roll ups all users that are in an Opportunity Split of type Overlay.</inlineHelpText>
        <label>Overlay</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PKIDOpp__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Opp{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID Opp</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PORequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1- 535 ;Checkbox fields on opportunity which is automatically populated from Account, SFDC1-959 : Added &apos;?&apos; to the Label.</description>
        <label>PO Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartnerAccountId__c</fullName>
        <description>For Partner Community.  Used to reference Channel Partner Account Id

This field is being used in Community related changes</description>
        <formula>Owner.PartnerAccountId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerProduct__c</fullName>
        <description>SFDC-2548 Global Alliance Upgrade</description>
        <inlineHelpText>Partner Product/Services</inlineHelpText>
        <label>Partner Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerType__c</fullName>
        <description>SFDC-5485 - Global Alliances - Upgrade (Amendments)</description>
        <formula>TEXT(Account.PartnerType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account partner type</inlineHelpText>
        <label>Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousFiscalYearOpportunityLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will take you to the Last fiscal year or the most recent Oppy link</description>
        <inlineHelpText>This field will take you to the Last fiscal year or the most recent Oppy link</inlineHelpText>
        <label>Previous Fiscal Year Opportunity Link</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Previous Fiscal Year Opportunity Link)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreviousOpportunityOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-311 : This field will be used to maintain the old Owner of the Opportunity when Owner is changed. Will be populate using Process Builder.</description>
        <label>Previous Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreviousYearLegacyReference__c</fullName>
        <description>SFDC-3321 Previous year legacy reference from previous year opportunity link</description>
        <formula>PreviousYearOpportunitylink__r.LegacyReference__c</formula>
        <inlineHelpText>Auto calculated from Previous year opportunity link</inlineHelpText>
        <label>Previous Year Legacy Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousYearOpportunityNumber__c</fullName>
        <description>SFDC-3321 Formula field to Capture Previous year oppy&apos;s Oppy number</description>
        <formula>PreviousYearOpportunitylink__r.Opportunitynum__c</formula>
        <label>Previous Year Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousYearOpportunitylink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1 -171; Link to the Previous Year&apos;s Opportunity on Renewals</description>
        <inlineHelpText>Please select opportunity</inlineHelpText>
        <label>Previous Year Opportunity link</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreviousYearTotalSalesPrice__c</fullName>
        <description>SFDC1-370 Pricing field to be populated via SAP integration</description>
        <inlineHelpText>Populated from SAP</inlineHelpText>
        <label>Previous Year Total Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceChangeOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3187 This checkbox when checked will allow user to update pricing on Auto renewal opportunity without changes</description>
        <inlineHelpText>Please use the Manual Price Increase button to select this</inlineHelpText>
        <label>Price Change Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriceChangeSyncFailed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3354 this field is checked when a price increase happens on a price change only renewal and it has duplicate products</description>
        <inlineHelpText>Checked if the system is unable to auto-sync price increase with the originating contract</inlineHelpText>
        <label>Price Change Sync Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryContact__c</fullName>
        <description>SFDC1-5228 Account Overview Report, To store primary contact name at Opportunity record level.</description>
        <inlineHelpText>To store primary contact name at Opportunity record level.</inlineHelpText>
        <label>Primary Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorYearTotalDiscountAmtRollup__c</fullName>
        <description>SFDC1-967 Creating Product Total Fields
SFDC1-5859 Calculation: Renewals Only - Sum of the Prior Year Total Discount Amt</description>
        <inlineHelpText>Renewals Only - Sum of the Prior Year Total Discount Amt</inlineHelpText>
        <label>Prior Year Total Discount Amt</label>
        <summarizedField>OpportunityLineItem.PriorYearTotalDiscountAmt__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PriorYearTotalFirstYearValueSub__c</fullName>
        <inlineHelpText>Last fiscal year sum of first year value in USD for all active SUBSCRIPTION products (existing + new). Using current FX rate</inlineHelpText>
        <label>Prior Year total First year value-Sub</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearTotalFirstYearValue__c</fullName>
        <inlineHelpText>Last fiscal year sum of first year value in USD for all active products (existing + new). Using current FX rate.</inlineHelpText>
        <label>Prior Year total First year value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearTotalRollup__c</fullName>
        <description>SFDC1-967 Creating Product Total Fields
SFDC1-5859 Calculation: Renewals Only - Sum of the Prior Year Total Sales Price for Active Products</description>
        <inlineHelpText>Renewals Only - Sum of the Prior Year Total Sales Price for Active Products</inlineHelpText>
        <label>Prior Year Total</label>
        <summarizedField>OpportunityLineItem.PriorYearTotalSalesPrice__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProcessedContractNum__c</fullName>
        <description>SFDC1 -171; Field presents total number of contracts for a particular opportunity
SFDC1-5212 : Field Updated from Number to TEXT
SFDC1-9009 : Rename Processed Contract Num to SAP Processed Contract Num on the Opportunity.</description>
        <inlineHelpText>SAP Contract Number</inlineHelpText>
        <label>SAP Processed Contract Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCount__c</fullName>
        <description>SFDC1-546; The field gives total product present in a Opportunity</description>
        <label>Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <description>SFDC1-7525 product family calculated from related products
SFDC1-8785 : updating the field type to Long Text Area</description>
        <inlineHelpText>Product family of related products automatically populated by system</inlineHelpText>
        <label>Product Family</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <description>SFDC1-5228 Account Overview Report, To store rollup comma separated unique Product Group values of related products at Opportunity record level.</description>
        <inlineHelpText>To display concatenated Product Groups in a single text field.</inlineHelpText>
        <label>Product Group</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProfitCenter__c</fullName>
        <description>SFDC1-7525 Profit center to be rolled up from opportunity product&apos;s related product
SFDC1-8785 : updating the field type to Long Text Area</description>
        <inlineHelpText>Profit center for related products automatically populated by system</inlineHelpText>
        <label>Profit Center</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QuotationApproved__c</fullName>
        <description>IHSMUS-5248722 Quotation is validated and approved</description>
        <inlineHelpText>Quotation is validated and approved or not.</inlineHelpText>
        <label>Quotation Approved?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuoteEndDate__c</fullName>
        <description>SFDC1-9330 This field is required for DocuSign, to populate details when Quote ends</description>
        <formula>TODAY() +  QuoteValidFor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quote End Date</inlineHelpText>
        <label>Quote End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteValidFor__c</fullName>
        <defaultValue>60</defaultValue>
        <description>SFDC1-7146:Feature to define how long a quote is valid for</description>
        <inlineHelpText>Default is 60 days</inlineHelpText>
        <label>Quote Valid For</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROIAnalysisCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadyForProcessingContractExist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-5701, this will be set to true by the process builder on Contract whenever Contract Status changes to &quot;Ready For Processing&quot;.</description>
        <label>Ready For Processing Contract Exist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecommendedUnitPriceTotalRollup__c</fullName>
        <description>SFDC1-967 Creating Product Total Fields
SFDC1-5859 Calculation: Sum of the Recommended Unit Price field on the Opp Products</description>
        <inlineHelpText>Sum of the Recommended Unit Price field on the Opp Products</inlineHelpText>
        <label>Recommended Unit Price Total</label>
        <summarizedField>OpportunityLineItem.RecommendedUnitPrice__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ReferralPartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-3289: IPREO Opportunity Field for Referral Partner</description>
        <inlineHelpText>Please use this field to select the Referral Partner Account.</inlineHelpText>
        <label>Referral Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.ReferralAccount__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Referral Partner)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferralType__c</fullName>
        <description>SFDC-1632 for the IHS Migration</description>
        <label>Referral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Referral Only</fullName>
                </value>
                <value>
                    <fullName>Referral Plus Logistics</fullName>
                </value>
                <value>
                    <fullName>Referral Fee Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>